--- a/PICUdrugs/packages.config
+++ b/PICUdrugs/packages.config
@@ -3,17 +3,17 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net40" />
   <package id="elmah" version="1.2.2" targetFramework="net40" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net40" />
-  <package id="EntityFramework" version="6.0.2" targetFramework="net40" />
-  <package id="jQuery" version="2.0.3" targetFramework="net40" />
-  <package id="jQuery.UI.Combined" version="1.10.3" targetFramework="net40" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net40" />
+  <package id="jQuery" version="2.1.0" targetFramework="net40" />
+  <package id="jQuery.UI.Combined" version="1.10.4" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net40" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.Web.Xdt" version="1.0.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
-  <package id="Nuget.Core" version="2.7.2" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
+  <package id="NuGet.Core" version="2.8.0" targetFramework="net40" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net40" />
   <package id="System.Web.Providers.Core" version="1.1" targetFramework="net40" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net40" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net40" />
 </packages>
