--- a/PicuDrugsUnitTestProject/PicuDrugsUnitTestProject.csproj
+++ b/PicuDrugsUnitTestProject/PicuDrugsUnitTestProject.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
