--- a/PICUdrugs/PICUdrugs2013.csproj
+++ b/PICUdrugs/PICUdrugs2013.csproj
@@ -72,6 +72,9 @@
       <HintPath>..\packages\PDFsharp-MigraDoc-GDI.1.32.4334.0\lib\net20\MigraDoc.RtfRendering.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PdfSharp, Version=1.32.3057.0, Culture=neutral, PublicKeyToken=f94615aa0424f9eb, processorArchitecture=MSIL">
       <HintPath>..\packages\PDFsharp-MigraDoc-GDI.1.32.4334.0\lib\net20\PdfSharp.dll</HintPath>
       <Private>True</Private>
@@ -113,6 +116,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\addDateModified.sql">
+      <Link>Code\DataAccessLayer\SqlEntities\addDateModified.sql</Link>
+    </Content>
     <Content Include="About.aspx" />
     <Content Include="App_Data\newUserConfirmation.txt" />
     <Content Include="App_Data\passwordRecover.txt" />
@@ -274,19 +280,19 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="packages.config" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="fonts\FontAwesome.otf" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
     <None Include="Properties\PublishProfiles\openhost.pubxml" />
     <None Include="Scripts\jquery-1.12.4.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.js" />
@@ -520,6 +526,105 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\ContextHelpers\DeletionsDetail.cs">
+      <Link>Code\DataAccessLayer\ContextHelpers\DeletionsDetail.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\ContextHelpers\EnumerableForeach.cs">
+      <Link>Code\DataAccessLayer\ContextHelpers\EnumerableForeach.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\DrugSqlContext\DrugSqlContext.cs">
+      <Link>Code\DataAccessLayer\DrugSqlContext\DrugSqlContext.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\DrugSqlContext\Helpers\AfterDeletionUpdate.cs">
+      <Link>Code\DataAccessLayer\DrugSqlContext\Helpers\AfterDeletionUpdate.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\DrugSqlContext\Helpers\NullOrList.cs">
+      <Link>Code\DataAccessLayer\DrugSqlContext\Helpers\NullOrList.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\BolusDose.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\BolusDose.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\BolusDrug.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\BolusDrug.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\BolusSortOrdering.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\BolusSortOrdering.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\DefibJoule.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\DefibJoule.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\DefibModel.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\DefibModel.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\BolusDrugs\FixedDoseBolus.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\BolusDrugs\FixedDoseBolus.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\DateUtilities.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\DateUtilities.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Enums\DilutionMethod.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Enums\DilutionMethod.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Enums\NosqlTable.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Enums\NosqlTable.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Enums\SiUnit.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Enums\SiUnit.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\FieldConst.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\FieldConst.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\DoseCat.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\DoseCat.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\DrugAmpuleConcentration.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\DrugAmpuleConcentration.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\DrugReferenceSource.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\DrugReferenceSource.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\DrugRoute.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\DrugRoute.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\FixedTimeConcentration.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\FixedTimeConcentration.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\FixedTimeDilution.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\FixedTimeDilution.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\InfusionDiluent.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\InfusionDiluent.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\InfusionDrug.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\InfusionDrug.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\InfusionSortOrdering.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\InfusionSortOrdering.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\VariableTimeConcentration.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\VariableTimeConcentration.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Infusions\VariableTimeDilution.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Infusions\VariableTimeDilution.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Interfaces\IInfusionConcentration.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Interfaces\IInfusionConcentration.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Interfaces\IInfusionDillution.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Interfaces\IInfusionDillution.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Interfaces\INoSqlTable.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Interfaces\INoSqlTable.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\RecordDeletionDate.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\RecordDeletionDate.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\UpdateTrackingEntity.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\UpdateTrackingEntity.cs</Link>
+    </Compile>
+    <Compile Include="..\..\..\..\Visual Studio 2017\Projects\DrugClasses\DBToJSON\SqlEntities\Ward.cs">
+      <Link>Code\DataAccessLayer\SqlEntities\Ward.cs</Link>
+    </Compile>
     <Compile Include="About.aspx.cs">
       <DependentUpon>About.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -542,45 +647,18 @@
     <Compile Include="Code\BuisnessLayer\ReferencesBL.cs" />
     <Compile Include="Code\BuisnessLayer\StatisticalMethods.cs" />
     <Compile Include="Code\BuisnessLayer\WardBL.cs" />
-    <Compile Include="Code\DataAccessLayer\Context\DataContext.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\BolusDose.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\FixedDoseBolus.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\BolusDrug.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\BolusSortOrdering.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\DefibJoule.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\BolusDrugs\DefibModel.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\IDateModified.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DilutionMethod.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DoseCat.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DrugAmpuleConcentration.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DrugEntityDataAnnotations.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DrugReferenceSource.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\DrugRoute.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\FixedTimeConcentration.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\FixedTimeDilution.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\InfusionDiluent.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\InfusionDrug.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\InfusionSortOrdering.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\SiPrefix.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\SiUnit.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\VariableTimeConcentration.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Infusions\VariableTimeDilution.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\StatisticalData\CdcBmiForAge.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\StatisticalData\CdcLengthForAge.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\StatisticalData\CdcWeightForAge.cs" />
-    <Compile Include="Code\DataAccessLayer\Entities\Ward.cs" />
     <Compile Include="Code\DataAccessLayer\Interfaces\IBolusRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Interfaces\IInfusionRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Maps\InfusionEngines.cs" />
     <Compile Include="Code\DataAccessLayer\Maps\PatientChart.cs" />
-    <Compile Include="Code\DataAccessLayer\Maps\StatisticalTables.cs" />
+    <Compile Include="Code\Utilities\DilutionMethodLogic.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\FixedDoseRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\BolusRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DefibJouleRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DefibRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DropDownItemsRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DrugAmpuleRepository.cs" />
-    <Compile Include="Code\DataAccessLayer\Repositories\DrugEntityExtensions.cs" />
+    <Compile Include="Code\DataAccessLayer\Repositories\InfusionExtensions.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DrugReferenceRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\DrugSortingRepository.cs" />
     <Compile Include="Code\DataAccessLayer\Repositories\InfusionDrugNameRepository.cs" />
@@ -595,6 +673,7 @@
     <Compile Include="Code\Utilities\PdfChartGeneration.cs" />
     <Compile Include="Code\Utilities\CssStyleProperty.cs" />
     <Compile Include="Code\Utilities\TrueFalseTable.cs" />
+    <Compile Include="Code\Utilities\UnitString.cs" />
     <Compile Include="Code\Utilities\UserProfile.cs" />
     <Compile Include="Code\Utilities\Utilities.cs" />
     <Compile Include="Contact.aspx.cs">
@@ -794,9 +873,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Code\DataAccessLayer\Entities\Enums\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
