--- a/PICUdrugs/packages.config
+++ b/PICUdrugs/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="bootstrap" version="3.4.1" targetFramework="net461" />
   <package id="elmah" version="1.2.2" targetFramework="net452" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -11,6 +11,7 @@
   <package id="Microsoft.AspNet.Providers" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Providers.Core" version="2.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="PDFsharp-MigraDoc-GDI" version="1.32.4334.0" targetFramework="net452" />
   <package id="TinyMCE" version="4.4.2" targetFramework="net461" />
 </packages>
